[metadata]
name = parso
author = David Halter
author_email = davidhalter88@gmail.com
maintainer = David Halter
maintainer_email = davidhalter88@gmail.com
license = MIT
description = A Python Parser
long_description = file: README.rst, CHANGELOG.rst
keywords = python, parser, parsing
url = https://github.com/davidhalter/parso
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Editors :: Integrated Development Environments (IDE)
    Topic :: Utilities
    Typing :: Typed
platforms = any

[options]
packages = find:
include_package_data = True
python_requires = >=3.6

[options.packages.find]
exclude =
    test
    test.*

[options.extras_require]
testing = pytest<6.0.0; docopt
qa = flake8==3.8.3; mypy==0.782

[options.package_data]
parso =
    python/grammar*.txt
    py.typed
    *.pyi
    **/*.pyi

[bdist_wheel]
universal=1

[flake8]
max-line-length = 100
ignore =
  # do not use bare 'except'
  E722,
  # don't know why this was ever even an option, 1+1 should be possible.
  E226,
  # line break before binary operator
  W503,


[mypy]
disallow_subclassing_any = True

# Avoid creating future gotchas emerging from bad typing
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unused_configs = True
warn_unreachable = True

strict_equality = True
